fix: text field icon overlap (#145)
add right-pad to allow for icons

--- a/projects/styles/_textinput.scss
+++ b/projects/styles/_textinput.scss
@@ -95,6 +95,14 @@
   }
 }
 
+.invalid > .form-text-input  {
+  padding-right: 2rem;
+}
+
+.validated > .form-text-input  {
+  padding-right: 2rem;
+}
+
 input::placeholder {
   overflow: visible;
 }
